Fix top controls spacing issue when widgetizing reports

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -667,6 +667,10 @@ td.cellSubDataTable .loadingPiwik {
   .dataTable.isDataTableEmpty:not(.hasSearchKeyword) & {
     display: none;
   }
+
+  .dataTable.dataTableVizHtmlTable .dataTableWrapper & {
+    margin-top: 0;
+  }
 }
 
 .theWidgetContent .card .card-content, table.dataTable {
